# spotify-viz

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: python-app.yml
backend/: Dockerfile  Pipfile  main.py  pyproject.toml  requirements.txt  tekore.cfg  tekore_config.py
backend/app/: _tekore_testing.py  cache.py  config.py  connections.py  database.db  main.py  spotify.py  sql_app.db  tekore.cfg
backend/app/db/: crud.py  database.py  models.py  schemas.py
backend/app/helpers/: crud.py  spotify.py  tekore_setup.py
backend/app/routers/: auth.py  data.py  overview.py  playlists.py  status.py  users.py
backend/app/tests/: conftest.py  test_spotify.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: CurrentlyListening.js  CurrentlyListing.js  Home.js  HomeBlurb.js  LastListening.js  Login.js  LoginButton.js  NavBar.js  TestBackend.js
frontend/src/components/common/: NavBar.js
frontend/src/components/home/: .PlaylistGallery.js.swp  CurrentlyListening.js  Home.js  HomeBlurb.js  LastListening.js  PlaylistCard.js  PlaylistGallery.js
frontend/src/components/login/: Login.js  LoginBlurb.js  LoginButton.js
frontend/src/routes/: PrivateRoute.js
frontend/src/themes/: theme.js
