[tool.poetry]
name = "spot-viz backend"
version = "0.1.0"
description = "a spotify visualization tool"
authors = ["evanofslack <51209817+evanofslack@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
sqlmodel = "^0.0.4"
uvicorn = "^0.15.0"
tekore = "^3.7.1"
requests = "^2.26.0"
itsdangerous = "^2.0.1"
iso8601 = "^0.1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
